--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.2.4", features = ["derive"] }
+clap = { version = "4.2.4", features = ["derive", "cargo"] }
 colored = "2.0.0"
 itertools = "0.10.5"
 open = "4.0.2"
@@ -15,3 +15,4 @@ reqwest = { version = "0.11.16", features = ["json", "blocking"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 termion = "2.0.1"
+textwrap = "0.16.0"
